--- a/image.html
+++ b/image.html
@@ -8,11 +8,12 @@
 
     function drawBasic() {
         var data = google.visualization.arrayToDataTable([
-            ['Genre', 'Fantasy & Sci Fi', 'Romance', 'Mystery/Crime', 'General',
+            ['Very dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied',
              'Western', 'Literature', { role: 'annotation' }],
             ['2010', 10, 24, 20, 32, 18, 5, ''],
             ['2020', 16, 22, 23, 30, 16, 9, ''],
             ['2030', 28, 19, 29, 30, 12, 13, '']
+            ['2040', 2, 5, 8, 21, 5, 1, '']
         ]);
 
         var options = {
