--- a/image.html
+++ b/image.html
@@ -1,29 +1,40 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript" src="script.js"></script>
 <div id="chart_div"></div>
 
 <script type="text/javascript">
     google.charts.load('current', {packages: ['corechart', 'bar']});
-    google.charts.setOnLoadCallback(drawBasic);
+    google.charts.setOnLoadCallback(drawReviewChart);
 
-    function drawBasic() {
+    function drawReviewChart() {
+        // Mock employee review data for 5 categories
         var data = google.visualization.arrayToDataTable([
-            ['Very dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied',
-             'Western', 'Literature', { role: 'annotation' }],
-            ['2010', 10, 24, 20, 32, 18, 5, ''],
-            ['2020', 16, 22, 23, 30, 16, 9, ''],
-            ['2030', 28, 19, 29, 30, 12, 13, ''],
-            ['2040', 2, 5, 8, 21, 5, 1, '']
+            ['Employee', 'Punctuality', 'Teamwork', 'Skills', 'Communication', 'Problem Solving', { role: 'annotation' }],
+            ['Priyul', 9, 8, 7, 8, 6, ''],
+            ['Shuaib', 8, 9, 9, 7, 8, ''],
+            ['Ashir', 7, 6, 8, 9, 7, ''],
+            ['Antonette', 10, 7, 8, 8, 9, ''],
+            ['Adriaan', 6, 9, 8, 7, 10, '']
         ]);
 
+        // Chart options
         var options = {
-            width: 800,  
-            height: 600, 
+            title: 'Employee Review Scores',
+            width: 900,
+            height: 600,
             legend: { position: 'top', maxLines: 3 },
             bar: { groupWidth: '75%' },
-            isStacked: true
+            isStacked: true,
+            hAxis: {
+                title: 'Scores',
+                minValue: 0,
+                maxValue: 10
+            },
+            vAxis: {
+                title: 'Employees'
+            }
         };
 
+        // Draw the chart in the 'chart_div' element
         var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
         chart.draw(data, options);
     }
