--- a/image.html
+++ b/image.html
@@ -1,22 +1,18 @@
+```html
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <div id="chart_div"></div>
-
 <script type="text/javascript">
-    google.charts.load('current', {packages: ['corechart', 'bar']});
+    google.charts.load('current', {packages:['corechart', 'bar']});
     google.charts.setOnLoadCallback(drawReviewChart);
-
     function drawReviewChart() {
-        // Mock employee review data for 5 categories
         var data = google.visualization.arrayToDataTable([
-            ['Employee', 'Punctuality', 'Teamwork', 'Skills', 'Communication', 'Problem Solving', { role: 'annotation' }],
-            ['Priyul', 9, 8, 7, 8, 6, ''],
-            ['Shuaib', 8, 9, 9, 7, 8, ''],
-            ['Ashir', 7, 6, 8, 9, 7, ''],
-            ['Antonette', 10, 7, 8, 8, 9, ''],
-            ['Adriaan', 6, 9, 8, 7, 10, '']
+            ['Very Dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied',  {role: 'annotation'}],
+            ['Priyul', 2, 2, 2, 3, 4],
+            ['Shuaib', 0, 1, 1, 2, 2],
+            ['Ashir', 0, 0, 0, 2, 3],
+            ['Antonette', 0, 0, 0, 1, 2],
+            ['Adriaan', 0, 0, 0, 0, 3]
         ]);
-
-        // Chart options
         var options = {
             title: 'Employee Review Scores',
             width: 900,
@@ -24,18 +20,11 @@
             legend: { position: 'top', maxLines: 3 },
             bar: { groupWidth: '75%' },
             isStacked: true,
-            hAxis: {
-                title: 'Scores',
-                minValue: 0,
-                maxValue: 10
-            },
-            vAxis: {
-                title: 'Employees'
-            }
+            hAxis: { title: 'Scores', minValue: 0, maxValue: 10 },
+            vAxis: { title: 'Employees' }
         };
-
-        // Draw the chart in the 'chart_div' element
         var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
         chart.draw(data, options);
     }
 </script>
+```
