--- a/image.html
+++ b/image.html
@@ -6,12 +6,12 @@
     google.charts.setOnLoadCallback(drawReviewChart);
     function drawReviewChart() {
         var data = google.visualization.arrayToDataTable([
-            ['Very Dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied',  {role: 'annotation'}],
-            ['Priyul', 2, 1, 1, 4, 1],
-            ['Shuaib', 0, 0, 1, 2, 1],
-            ['Ashir', 0, 0, 0, 2, 1],
-            ['Antonette', 0, 0, 0, 3, 1],
-            ['Adriaan', 0, 0, 0, 1, 1]
+            ['Employee', 'Very Dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied', {role: 'annotation'}],
+            ['Priyul', 0, 0, 1, 4, 5, ''],
+            ['Shuaib', 0, 0, 1, 2, 2, ''],
+            ['Ashir', 0, 0, 0, 1, 2, ''],
+            ['Antonette', 0, 0, 0, 2, 2, ''],
+            ['Adriaan', 0, 0, 0, 1, 1, '']
         ]);
         var options = {
             title: 'Employee Review Scores',
@@ -20,7 +20,7 @@
             legend: { position: 'top', maxLines: 3 },
             bar: { groupWidth: '75%' },
             isStacked: true,
-            hAxis: { title: 'Scores', minValue: 0, maxValue: 10 },
+            hAxis: { title: 'Number of Feedback received', minValue: 0, maxValue: 15 },
             vAxis: { title: 'Employees' }
         };
         var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
