--- a/image.html
+++ b/image.html
@@ -7,11 +7,11 @@
     function drawReviewChart() {
         var data = google.visualization.arrayToDataTable([
             ['Employee', 'Very Dissatisfied', 'Dissatisfied', 'Neutral', 'Satisfied', 'Very Satisfied', {role: 'annotation'}],
-            ['Priyul', 1, 1, 2, 4, 4, ''],
-            ['Shuaib', 0, 1, 2, 2, 1, ''],
-            ['Ashir', 1, 1, 2, 2, 0, ''],
-            ['Antonette', 0, 0, 0, 3, 2, ''],
-            ['Adriaan', 0, 0, 0, 1, 1, '']
+            ['Tania Move', 2, 3, 1, 0, 0, ''],
+            ['Jake Mthembu', 0, 1, 1, 3, 1, ''],
+            ['Joao Felix', 0, 0, 0, 1, 2, ''],
+            ['Calvyn Swart', 1, 2, 1, 0, 0, ''],
+            ['Steven van Heerden', 0, 0, 0, 2, 2, '']
         ]);
         var options = {
             title: 'Employee Review Scores',
